Modifications et ajout de code pour la page d'accueil

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 <h2 class="article-title">Fonctionnement</h2>
                 <div class="operation-card-container">
                     <section class="operation-card">
-                            <span class="section-icon fa-solid fa-mobile-screen-button"></span>
+                            <span class="operation-icon fa-solid fa-mobile-screen-button"></span>
                             <h3 class="section-title">Choisissez un restaurant</h3>
                             <div class="dot">1</div>
                     </section>
                     <section class="operation-card">
-                            <span class="section-icon fa-solid fa-list-ul"></span>
+                            <span class="operation-icon fa-solid fa-list-ul"></span>
                             <h3 class="section-title">Composez votre menu</h3>
                             <div class="dot">2</div>
                     </section>
                     <section class="operation-card">
-                        <span class="section-icon fa-solid fa-store"></span>
+                        <span class="operation-icon fa-solid fa-store"></span>
                         <h3 class="section-title">Dégustez au restaurant</h3>
                         <div class="dot">3</div>
                     </section>
@@ -68,7 +68,7 @@
                         <div class="label-new">Nouveau</div>
                         <div class="card-content">
                             <div class="card-text">
-                                <h2 class="section-title">La palette du goût</h2>
+                                <h3 class="section-title">La palette du goût</h3>
                                 <p class="card-paragraph">Ménilmontant</p>
                             </div>
                                 <span class="heart-icon-border fa-regular fa-heart"></span>
@@ -80,7 +80,7 @@
                         <div class="label-new">Nouveau</div>
                         <div class="card-content">
                             <div class="card-text">
-                                <h2 class="section-title">La note enchantée</h2>
+                                <h3 class="section-title">La note enchantée</h3>
                                 <p class="card-paragraph">Charonne</p>
                             </div>
                                 <span class="heart-icon-border fa-regular fa-heart"></span>
@@ -89,10 +89,9 @@
                     </section>
                     <section class="restaurant-card">
                         <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="label-new">Nouveau</div>
                         <div class="card-content">
                             <div class="card-text">
-                                <h2 class="section-title">A la française</h2>
+                                <h3 class="section-title">A la française</h3>
                                 <p class="card-paragraph">Cité Rouge</p>
                             </div>
                                 <span class="heart-icon-border fa-regular fa-heart"></span>
@@ -101,10 +100,9 @@
                     </section>
                     <section class="restaurant-card">
                         <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="label-new">Nouveau</div>
                         <div class="card-content">
                             <div class="card-text">
-                                <h2 class="section-title">Le délice des sens</h2>
+                                <h3 class="section-title">Le délice des sens</h3>
                                 <p class="card-paragraph">Folie-Méricourt</p>
                             </div>
                                 <span class="heart-icon-border fa-regular fa-heart"></span>
@@ -118,20 +116,18 @@
                                         <!-- FOOTER -->
             <footer>
                 <nav class="footer-content">
-                    <a class="footer-title" href="index.html">
-                        <h2 >ohmyfood</h2>
-                    </a>
-                    <a class="footer-links-icon" href="#">
+                        <h2 class="footer-title" >ohmyfood</h2>
+                    <a class="footer-icon-links" href="#">
                         <span class="footer-icons fa-solid fa-utensils"></span>
                         <p>Proposer un restaurant</p>
                     </a>
-                    <a class="footer-links-icon" href="#">
+                    <a class="footer-icon-links" href="#">
                         <span class="footer-icons fa-solid fa-handshake-angle"></span>
                         <p>Devenir partenaire</p>
                     </a>
-                    <a class="footer-links-iconless" href="#">Mentions légales</a>
+                    <a class="footer-iconless-links" href="#">Mentions légales</a>
                     <address>
-                        <a class="footer-links-iconless" href="mailto:#">Contact</a>
+                        <a class="footer-iconless-links" href="mailto:#">Contact</a>
                     </address>
                 </nav>
             </footer>
