--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <body> 
     <div class="main-container">
         <header class="header">
-            <div class="logo-container">
-                <img src="assets/images/logo/ohmyfood.png" alt="Logo du site." class="header-logo">
+            <div class="header_logo-container">
+                <img class="header_logo" src= "assets/images/logo/ohmyfood.png" alt="Logo du site." >
             </div>
-            <div class="header-location">
-                <span class="location-icon fa-sharp fa-solid fa-location-dot"></span>
-                <p class="location-text">Paris, Belleville</p>
+            <div class="location">
+                <span class="location_icon fa-sharp fa-solid fa-location-dot"></span>
+                <p class="location_text">Paris, Belleville</p>
             </div>
-            <nav class="nav-section">
-                <h1 class="nav-title">Réservez le menu qui<br> vous convient</h1>
-                <p class="nav-text">Découvrez des restaurants d'exception,<br> seléctionnés par nos soins.</p>
-                <div class="nav-button">
+            <nav class="nav">
+                <h1 class="nav_heading">Réservez le menu qui<br> vous convient</h1>
+                <p class="nav_text">Découvrez des restaurants d'exception,<br> seléctionnés par nos soins.</p>
+                <div class="nav_button">
                     <a href="#restaurants">Explorer nos restaurants</a>
                 </div>
             </nav>
@@ -38,22 +38,22 @@
                                         <!-- OPERATION -->
 
             <article class="operation">
-                <h2 class="article-title">Fonctionnement</h2>
-                <div class="operation-card-container">
-                    <section class="operation-card">
-                            <span class="operation-icon fa-solid fa-mobile-screen-button"></span>
-                            <h3 class="section-title">Choisissez un restaurant</h3>
-                            <div class="dot">1</div>
+                <h2 class="operation_heading">Fonctionnement</h2>
+                <div class="operation_cards">
+                    <section class="operation_card">
+                            <span class="operation_icon fa-solid fa-mobile-screen-button"></span>
+                            <h3 class="operation_card_title">Choisissez un restaurant</h3>
+                            <div class="operation_dot">1</div>
                     </section>
-                    <section class="operation-card">
-                            <span class="operation-icon fa-solid fa-list-ul"></span>
-                            <h3 class="section-title">Composez votre menu</h3>
-                            <div class="dot">2</div>
+                    <section class="operation_card">
+                            <span class="operation_icon fa-solid fa-list-ul"></span>
+                            <h3 class="operation_card_title">Composez votre menu</h3>
+                            <div class="operation_dot">2</div>
                     </section>
-                    <section class="operation-card">
-                        <span class="operation-icon fa-solid fa-store"></span>
-                        <h3 class="section-title">Dégustez au restaurant</h3>
-                        <div class="dot">3</div>
+                    <section class="operation_card">
+                        <span class="operation_icon fa-solid fa-store"></span>
+                        <h3 class="operation_card_title">Dégustez au restaurant</h3>
+                        <div class="operation_dot">3</div>
                     </section>
                 </div>
             </article>
@@ -61,9 +61,9 @@
                                         <!-- RESTAURANTS -->
 
             <article class="restaurants" id="restaurants">
-                <h2 class="article-title">Restaurants</h2>
-                <div class="restaurant-card-container">
-                    <section class="restaurant-card">
+                <h2 class="restaurants_heading">Restaurants</h2>
+                <div class="restaurants_cards">
+                    <section class="restaurants_card">
                         <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
                         <div class="label-new">Nouveau</div>
                         <div class="card-content">
@@ -75,7 +75,7 @@
                                 <span class="heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurant-card">
+                    <section class="restaurants_card">
                         <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
                         <div class="label-new">Nouveau</div>
                         <div class="card-content">
@@ -87,18 +87,18 @@
                                 <span class="heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurant-card">
+                    <section class="restaurants_card">
                         <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
                         <div class="card-content">
                             <div class="card-text">
-                                <h3 class="section-title">A la française</h3>
+                                <h3 class="section-title">à la française</h3>
                                 <p class="card-paragraph">Cité Rouge</p>
                             </div>
                                 <span class="heart-icon-border fa-regular fa-heart"></span>
                                 <span class="heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurant-card">
+                    <section class="restaurants_card">
                         <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
                         <div class="card-content">
                             <div class="card-text">
@@ -115,19 +115,19 @@
                                         
                                         <!-- FOOTER -->
             <footer>
-                <nav class="footer-content">
-                        <h2 class="footer-title" >ohmyfood</h2>
-                    <a class="footer-icon-links" href="#">
-                        <span class="footer-icons fa-solid fa-utensils"></span>
+                <h2 class="footer_heading" >ohmyfood</h2>
+                <nav class="links-container">
+                    <a class="footer_links" href="#">
+                        <span class="footer_icons fa-solid fa-utensils"></span>
                         <p>Proposer un restaurant</p>
                     </a>
-                    <a class="footer-icon-links" href="#">
-                        <span class="footer-icons fa-solid fa-handshake-angle"></span>
+                    <a class="footer_links" href="#">
+                        <span class="footer_icons fa-solid fa-handshake-angle"></span>
                         <p>Devenir partenaire</p>
                     </a>
-                    <a class="footer-iconless-links" href="#">Mentions légales</a>
+                    <a class="footer_links" href="#">Mentions légales</a>
                     <address>
-                        <a class="footer-iconless-links" href="mailto:#">Contact</a>
+                        <a class="footer_links" href="mailto:#">Contact</a>
                     </address>
                 </nav>
             </footer>
