--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
     <title>Oh my Food</title>
 </head>
 <body> 
+                                            <!-- HEADER -->
     <div class="main-container">
         <header class="header">
-            <div class="header_logo-container">
-                <img class="header_logo" src= "assets/images/logo/ohmyfood.png" alt="Logo du site." >
+            <div class="header__logo-container">
+                <img class="header__logo" src= "assets/images/logo/ohmyfood.png" alt="Logo du site." >
             </div>
-            <div class="location">
-                <span class="location_icon fa-sharp fa-solid fa-location-dot"></span>
-                <p class="location_text">Paris, Belleville</p>
+            <div class="header__location">
+                <span class="header__location-icon fa-sharp fa-solid fa-location-dot"></span>
+                <p class="header__location-text">Paris, Belleville</p>
             </div>
-            <nav class="nav">
-                <h1 class="nav_heading">Réservez le menu qui<br> vous convient</h1>
-                <p class="nav_text">Découvrez des restaurants d'exception,<br> seléctionnés par nos soins.</p>
-                <div class="nav_button">
+            <nav class="header__nav">
+                <h1 class="header__nav-heading">Réservez le menu qui<br> vous convient</h1>
+                <p class="header__nav-text">Découvrez des restaurants d'exception,<br> seléctionnés par nos soins.</p>
+                <div class="header__nav-button">
                     <a href="#restaurants">Explorer nos restaurants</a>
                 </div>
             </nav>
@@ -38,22 +39,22 @@
                                         <!-- OPERATION -->
 
             <article class="operation">
-                <h2 class="operation_heading">Fonctionnement</h2>
-                <div class="operation_cards">
-                    <section class="operation_card">
-                            <span class="operation_icon fa-solid fa-mobile-screen-button"></span>
-                            <h3 class="operation_card_title">Choisissez un restaurant</h3>
-                            <div class="operation_dot">1</div>
+                <h2 class="operation__heading">Fonctionnement</h2>
+                <div class="operation__cards">
+                    <section class="operation__card">
+                            <span class="operation__icon fa-solid fa-mobile-screen-button"></span>
+                            <h3 class="operation__card-title">Choisissez un restaurant</h3>
+                            <div class="operation__dot">1</div>
                     </section>
-                    <section class="operation_card">
-                            <span class="operation_icon fa-solid fa-list-ul"></span>
-                            <h3 class="operation_card_title">Composez votre menu</h3>
-                            <div class="operation_dot">2</div>
+                    <section class="operation__card">
+                            <span class="operation__icon fa-solid fa-list-ul"></span>
+                            <h3 class="operation__card-title">Composez votre menu</h3>
+                            <div class="operation__dot">2</div>
                     </section>
-                    <section class="operation_card">
-                        <span class="operation_icon fa-solid fa-store"></span>
-                        <h3 class="operation_card_title">Dégustez au restaurant</h3>
-                        <div class="operation_dot">3</div>
+                    <section class="operation__card">
+                        <span class="operation__icon fa-solid fa-store"></span>
+                        <h3 class="operation__card-title">Dégustez au restaurant</h3>
+                        <div class="operation__dot">3</div>
                     </section>
                 </div>
             </article>
@@ -61,52 +62,52 @@
                                         <!-- RESTAURANTS -->
 
             <article class="restaurants" id="restaurants">
-                <h2 class="restaurants_heading">Restaurants</h2>
-                <div class="restaurants_cards">
-                    <section class="restaurants_card">
-                        <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="label-new">Nouveau</div>
-                        <div class="card-content">
-                            <div class="card-text">
-                                <h3 class="section-title">La palette du goût</h3>
-                                <p class="card-paragraph">Ménilmontant</p>
+                <h2 class="restaurants__heading">Restaurants</h2>
+                <div class="restaurants__cards">
+                    <section class="restaurants__card">
+                        <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                        <div class="restaurants__label-new">Nouveau</div>
+                        <div class="restaurants__card-content">
+                            <div class="restaurants__card-text">
+                                <h3 class="restaurants__card-heading">La palette du goût</h3>
+                                <p class="restaurants__card-paragraph">Ménilmontant</p>
                             </div>
-                                <span class="heart-icon-border fa-regular fa-heart"></span>
-                                <span class="heart-icon-solid fa-solid fa-heart"></span>    
+                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurants_card">
-                        <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="label-new">Nouveau</div>
-                        <div class="card-content">
-                            <div class="card-text">
-                                <h3 class="section-title">La note enchantée</h3>
-                                <p class="card-paragraph">Charonne</p>
+                    <section class="restaurants__card">
+                        <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                        <div class="restaurants__label-new">Nouveau</div>
+                        <div class="restaurants__card-content">
+                            <div class="restaurants__card-text">
+                                <h3 class="restaurants__card-heading">La note enchantée</h3>
+                                <p class="restaurants__card-paragraph">Charonne</p>
                             </div>
-                                <span class="heart-icon-border fa-regular fa-heart"></span>
-                                <span class="heart-icon-solid fa-solid fa-heart"></span>    
+                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurants_card">
-                        <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="card-content">
-                            <div class="card-text">
-                                <h3 class="section-title">à la française</h3>
-                                <p class="card-paragraph">Cité Rouge</p>
+                    <section class="restaurants__card">
+                        <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                        <div class="restaurants__card-content">
+                            <div class="restaurants__card-text">
+                                <h3 class="restaurants__card-heading">à la française</h3>
+                                <p class="restaurants__card-paragraph">Cité Rouge</p>
                             </div>
-                                <span class="heart-icon-border fa-regular fa-heart"></span>
-                                <span class="heart-icon-solid fa-solid fa-heart"></span>    
+                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
                         </div>
                     </section>
-                    <section class="restaurants_card">
-                        <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="card-thumb">
-                        <div class="card-content">
-                            <div class="card-text">
-                                <h3 class="section-title">Le délice des sens</h3>
-                                <p class="card-paragraph">Folie-Méricourt</p>
+                    <section class="restaurants__card">
+                        <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                        <div class="restaurants__card-content">
+                            <div class="restaurants__card-text">
+                                <h3 class="restaurants__card-heading">Le délice des sens</h3>
+                                <p class="restaurants__card-paragraph">Folie-Méricourt</p>
                             </div>
-                                <span class="heart-icon-solid fa-solid fa-heart"></span>    
-                                <span class="heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
+                                <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
                         </div>
                     </section>
                     
@@ -114,21 +115,23 @@
             </article>
                                         
                                         <!-- FOOTER -->
-            <footer>
-                <h2 class="footer_heading" >ohmyfood</h2>
-                <nav class="links-container">
-                    <a class="footer_links" href="#">
-                        <span class="footer_icons fa-solid fa-utensils"></span>
-                        <p>Proposer un restaurant</p>
-                    </a>
-                    <a class="footer_links" href="#">
-                        <span class="footer_icons fa-solid fa-handshake-angle"></span>
-                        <p>Devenir partenaire</p>
-                    </a>
-                    <a class="footer_links" href="#">Mentions légales</a>
-                    <address>
-                        <a class="footer_links" href="mailto:#">Contact</a>
-                    </address>
+            <footer class="footer">
+                <h2 class="footer__heading" >ohmyfood</h2>
+                <nav class="footer__links-container">
+                    <div class="footer__links-icon">
+                        <a class="footer__links" href="#">
+                            <span class="footer__icons fa-solid fa-utensils"></span>
+                            <p>Proposer un restaurant</p>
+                        </a>
+                        <a class="footer__links" href="#">
+                            <span class="footer__icons fa-solid fa-handshake-angle"></span>
+                            <p>Devenir partenaire</p>
+                        </a>
+                    </div>
+                    <div class="footer__links-iconless">
+                        <a class="footer__links" href="#">Mentions légales</a>
+                        <a class="footer__links" href="mailto:#">Contact</a>
+                    </div>
                 </nav>
             </footer>
         </main>
