--- a/index.html
+++ b/index.html
@@ -39,78 +39,82 @@
                                         <!-- OPERATION -->
 
             <article class="operation">
-                <h2 class="operation__heading">Fonctionnement</h2>
-                <div class="operation__cards">
-                    <section class="operation__card">
-                            <span class="operation__icon fa-solid fa-mobile-screen-button"></span>
-                            <h3 class="operation__card-title">Choisissez un restaurant</h3>
-                            <div class="operation__dot">1</div>
-                    </section>
-                    <section class="operation__card">
-                            <span class="operation__icon fa-solid fa-list-ul"></span>
-                            <h3 class="operation__card-title">Composez votre menu</h3>
-                            <div class="operation__dot">2</div>
-                    </section>
-                    <section class="operation__card">
-                        <span class="operation__icon fa-solid fa-store"></span>
-                        <h3 class="operation__card-title">Dégustez au restaurant</h3>
-                        <div class="operation__dot">3</div>
-                    </section>
+                <div class="operation__container">
+                    <h2 class="operation__heading">Fonctionnement</h2>
+                    <div class="operation__cards">
+                        <section class="operation__card">
+                                <span class="operation__icon fa-solid fa-mobile-screen-button"></span>
+                                <h3 class="operation__card-title">Choisissez un restaurant</h3>
+                                <div class="operation__dot">1</div>
+                        </section>
+                        <section class="operation__card">
+                                <span class="operation__icon fa-solid fa-list-ul"></span>
+                                <h3 class="operation__card-title">Composez votre menu</h3>
+                                <div class="operation__dot">2</div>
+                        </section>
+                        <section class="operation__card">
+                            <span class="operation__icon fa-solid fa-store"></span>
+                            <h3 class="operation__card-title">Dégustez au restaurant</h3>
+                            <div class="operation__dot">3</div>
+                        </section>
+                    </div>
                 </div>
             </article>
 
                                         <!-- RESTAURANTS -->
 
             <article class="restaurants" id="restaurants">
-                <h2 class="restaurants__heading">Restaurants</h2>
-                <div class="restaurants__cards">
-                    <section class="restaurants__card">
-                        <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                        <div class="restaurants__label-new">Nouveau</div>
-                        <div class="restaurants__card-content">
-                            <div class="restaurants__card-text">
-                                <h3 class="restaurants__card-heading">La palette du goût</h3>
-                                <p class="restaurants__card-paragraph">Ménilmontant</p>
-                            </div>
+                <div class="restaurants__container">
+                    <h2 class="restaurants__heading">Restaurants</h2>
+                    <div class="restaurants__cards">
+                        <section class="restaurants__card">
+                            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <div class="restaurants__label-new">Nouveau</div>
+                            <div class="restaurants__card-content">
+                                <div class="restaurants__card-text">
+                                    <h3 class="restaurants__card-heading">La palette du goût</h3>
+                                    <p class="restaurants__card-paragraph">Ménilmontant</p>
+                                </div>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
-                        </div>
-                    </section>
-                    <section class="restaurants__card">
-                        <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                        <div class="restaurants__label-new">Nouveau</div>
-                        <div class="restaurants__card-content">
-                            <div class="restaurants__card-text">
-                                <h3 class="restaurants__card-heading">La note enchantée</h3>
-                                <p class="restaurants__card-paragraph">Charonne</p>
                             </div>
+                        </section>
+                        <section class="restaurants__card">
+                            <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <div class="restaurants__label-new">Nouveau</div>
+                            <div class="restaurants__card-content">
+                                <div class="restaurants__card-text">
+                                    <h3 class="restaurants__card-heading">La note enchantée</h3>
+                                    <p class="restaurants__card-paragraph">Charonne</p>
+                                </div>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
-                        </div>
-                    </section>
-                    <section class="restaurants__card">
-                        <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                        <div class="restaurants__card-content">
-                            <div class="restaurants__card-text">
-                                <h3 class="restaurants__card-heading">à la française</h3>
-                                <p class="restaurants__card-paragraph">Cité Rouge</p>
                             </div>
+                        </section>
+                        <section class="restaurants__card">
+                            <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <div class="restaurants__card-content">
+                                <div class="restaurants__card-text">
+                                    <h3 class="restaurants__card-heading">à la française</h3>
+                                    <p class="restaurants__card-paragraph">Cité Rouge</p>
+                                </div>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
-                        </div>
-                    </section>
-                    <section class="restaurants__card">
-                        <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
-                        <div class="restaurants__card-content">
-                            <div class="restaurants__card-text">
-                                <h3 class="restaurants__card-heading">Le délice des sens</h3>
-                                <p class="restaurants__card-paragraph">Folie-Méricourt</p>
                             </div>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>    
+                        </section>
+                        <section class="restaurants__card">
+                            <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <div class="restaurants__card-content">
+                                <div class="restaurants__card-text">
+                                    <h3 class="restaurants__card-heading">Le délice des sens</h3>
+                                    <p class="restaurants__card-paragraph">Folie-Méricourt</p>
+                                </div>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-                        </div>
-                    </section>
+                            </div>
+                        </section>
                     
+                    </div>
                 </div>
             </article>
                                         
