--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
-
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Oh my Food</title>
 </head>
 <body> 
@@ -20,7 +19,7 @@
     <div class="main-container">
         <header class="header">
             <div class="header__logo-container">
-                <img class="header__logo" src= "assets/images/logo/ohmyfood.png" alt="Logo du site." >
+                <img class="header__logo" src= "./assets/images/logo/ohmyfood.png" alt="Logo du site." >
             </div>
             <div class="header__location">
                 <span class="header__location-icon fa-sharp fa-solid fa-location-dot"></span>
@@ -68,49 +67,51 @@
                     <h2 class="restaurants__heading">Restaurants</h2>
                     <div class="restaurants__cards">
                         <section class="restaurants__card">
-                            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
                             <div class="restaurants__label-new">Nouveau</div>
                             <div class="restaurants__card-content">
                                 <div class="restaurants__card-text">
                                     <h3 class="restaurants__card-heading">La palette du goût</h3>
                                     <p class="restaurants__card-paragraph">Ménilmontant</p>
                                 </div>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                             </div>
                         </section>
                         <section class="restaurants__card">
-                            <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
                             <div class="restaurants__label-new">Nouveau</div>
                             <div class="restaurants__card-content">
                                 <div class="restaurants__card-text">
                                     <h3 class="restaurants__card-heading">La note enchantée</h3>
                                     <p class="restaurants__card-paragraph">Charonne</p>
                                 </div>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                             </div>
                         </section>
                         <section class="restaurants__card">
-                            <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
                             <div class="restaurants__card-content">
                                 <div class="restaurants__card-text">
                                     <h3 class="restaurants__card-heading">à la française</h3>
                                     <p class="restaurants__card-paragraph">Cité Rouge</p>
                                 </div>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                             </div>
                         </section>
                         <section class="restaurants__card">
-                            <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+                            <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
                             <div class="restaurants__card-content">
                                 <div class="restaurants__card-text">
                                     <h3 class="restaurants__card-heading">Le délice des sens</h3>
                                     <p class="restaurants__card-paragraph">Folie-Méricourt</p>
                                 </div>
-                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
                                 <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
+                                <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
+                                <!-- <span class="restaurants__border fa-regular fa-heart"></span> -->
+
                             </div>
                         </section>
                     
