Mixin button, page-1: mise en page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="header__nav">
                 <h1 class="header__nav-heading">Réservez le menu qui<br> vous convient</h1>
                 <p class="header__nav-text">Découvrez des restaurants d'exception,<br> seléctionnés par nos soins.</p>
-                <div class="header__nav-button">
+                <div class="header__cta-button">
                     <a href="#restaurants">Explorer nos restaurants</a>
                 </div>
             </nav>
