--- a/restaurants/page_1.html
+++ b/restaurants/page_1.html
@@ -19,33 +19,40 @@
     <div class="main-container">
         <header class="header">
             <div class="header__logo-container">
+                <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 <img class="header__logo" src= "../assets/images/logo/ohmyfood.png" alt="Logo du site." >
             </div>
+            <div class="header__image">
+                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique" class="restaurants__card-thumb">
+            </div>
             
-                                             <!-- OPERATION -->
+                                             <!-- MENU -->
             
-    <article class="operation">
-        <div class="operation__container">
-            <h1 class="operation__heading">La Palette du goût</h1>
-            <span class="restaurants__heart-icon-border fa-regular fa-heart"></span>
-            <span class="restaurants__heart-icon-solid fa-solid fa-heart"></span>
-            <section class="appetizer">   
-                <h2 class="operation__heading">Entrées</h2>  
+    <article class="menu">
 
-                <div class="operation__cards">
-                    <section class="operation__card">
-                        <div class="restaurants__card-text">
-                            <h3 class="restaurants__card-heading">à la française</h3>
-                            <p class="restaurants__card-paragraph">Cité Rouge</p>
+        <div class="menu__container">
+            <h1 class="menu__heading">La Palette du goût</h1>
+            <span class="menu__heart-icon-border fa-regular fa-heart"></span>
+            <span class="menu__heart-icon-solid fa-solid fa-heart"></span>
+                                      <!-- appetizer -->                                       
+            <section class="menu__appetizer">   
+                <h2 class="menu__heading">entrées</h2>  
+                <div class="menu__cards">
+                    <section class="menu__card">
+                        <div class="menu__card-text">
+                            <h3 class="menu__card-heading">Fricassée d'escargots</h3>
+                            <p class="menu__card-paragraph">Au piment d'Espelette </p>
                         </div>
-                        <span class="operation__icon fa-solid fa-mobile-screen-button"></span>
+                        <span class="menu__price">30€</span>
                     </section>
+                                      <!-- dishes -->                       
+                                      <!-- reservation -->                       
+                </div>
+                <div class="menu__cta-button">
+                    <a href="#">Commander</a>
                 </div>
             </section>
         </article>
-        <div class="header__nav-button">
-            <a href="#restaurants">Commander</a>
-        </div>
 
                                         <!-- FOOTER -->
     <footer class="footer">
