--- a/index.html
+++ b/index.html
@@ -11,11 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="./assets/css/prefixed/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Oh my Food</title>
 </head>
 <body> 
-                                            <!-- HEADER -->
+    <!-- LOADER -->
+<div class="main-loader">
+<div class="main-loader__bg">
+<div class="main-loader__heading "></div>
+<div class="main-loader__bars ">
+<div class="main-loader__bar"></div>
+<div class="main-loader__bar"></div>
+<div class="main-loader__bar"></div>
+</div>
+<div class="main-loader__bars">
+<div class="main-loader__bar"></div>
+<div class="main-loader__bar"></div>
+<div class="main-loader__bar"></div>
+</div>
+<div class="main-loader__footer "></div>
+</div>
+</div>                                       
+    <!-- HEADER -->
     <div class="main-container">
         <header class="header">
             <div class="header__logo-container">
