pages-..4, modification anim coeur et survols

--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- <link rel="stylesheet" href="./assets/css/prefixed/style.css"> -->
     <title>Oh my Food</title>
 </head>
 <body> 
     <!-- LOADER -->
-<div class="main-loader">
-<div class="main-loader__bg">
-<div class="main-loader__heading "></div>
-<div class="main-loader__bars ">
-<div class="main-loader__bar"></div>
-<div class="main-loader__bar"></div>
-<div class="main-loader__bar"></div>
-</div>
-<div class="main-loader__bars">
-<div class="main-loader__bar"></div>
-<div class="main-loader__bar"></div>
-<div class="main-loader__bar"></div>
-</div>
-<div class="main-loader__footer "></div>
-</div>
-</div>                                       
+    <div class="main-loader">
+    <div class="main-loader__bg">
+        <div class="main-loader__heading "></div>
+            <div class="main-loader__bars ">
+                <div class="main-loader__bar"></div>
+                <div class="main-loader__bar"></div>
+                <div class="main-loader__bar"></div>
+        </div>
+            <div class="main-loader__bars">
+                <div class="main-loader__bar"></div>
+                <div class="main-loader__bar"></div>
+                <div class="main-loader__bar"></div>
+        </div>
+        <div class="main-loader__footer "></div>
+    </div>
+    </div>                                       
     <!-- HEADER -->
     <div class="main-container">
         <header class="header">
