--- a/restaurants/page_1.html
+++ b/restaurants/page_1.html
@@ -114,7 +114,7 @@
                         </div>
                     </section>
                     <section class="menu__dishes menu__dishes--3">  
-                        <h2 class="menu__heading">dessert</h2>  
+                        <h2 class="menu__heading">desserts</h2>  
                         <div class="menu__cards">
                             <div class="menu__card">
                                 <div class="menu__card-text reveal-text--3">
