--- a/restaurants/page_3.html
+++ b/restaurants/page_3.html
@@ -12,10 +12,173 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>La Palette du goût</title>
+    <title>A la française</title>
 </head>
     <body> 
-       
+                                            <!-- HEADER -->
+        <div class="main-container">
+            <header class="header">
+                <div class="header__logo-container">
+                    <a class="menu__arrow" href="../index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                    <img class="header__logo" src= "../assets/images/logo/ohmyfood.png" alt="Logo du site." >
+                </div>
+                <div >
+                    <img class="header__image" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique">
+                </div>
+            </header>    
+                                                <!-- MENU -->
+                
+            <article class="menu">
+                <h1 class="menu__heading">A la française
+                <span class="menu__heart-icon-border fa-regular fa-heart"></span>
+                <span class="menu__heart-icon-solid fa-solid fa-heart"></span>
+                </h1>
+                <div class="menu__container">
+                                            <!-- appetizer -->                                       
+                    <section class="menu__dishes menu__dishes--1">   
+                        <h2 class="menu__heading reveal-text--1">entrées</h2>  
+                        <div class="menu__cards">
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--1">
+                                    <h3 class="menu__card-heading">Tartare de poulpe acidulé</h3>
+                                    <p class="menu__card-paragraph">Aux zestes d'orange</p>
+                                </div> 
+                                <div class="menu__price reveal-text--1">25€</div> 
+                                <div class="menu__slide reveal-text--1333">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>  
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--1">
+                                    <h3 class="menu__card-heading">Velouté de légumes d'antan</h3>
+                                    <p class="menu__card-paragraph">Carotte, panais, topinambour</p>
+                                </div>  
+                                <div class="menu__price reveal-text--1">35€</div>
+                                <div class="menu__slide reveal-text--1">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>   
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--1">
+                                    <h3 class="menu__card-heading">Soupe à l'oignon</h3>
+                                    <p class="menu__card-paragraph">Revisitée</p>
+                                </div> 
+                                <div class="menu__price reveal-text--1">20€</div>
+                                <div class="menu__slide reveal-text--1">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>    
+                            </div>
+                        </div>
+                    </section>
+                    <section class="menu__dishes menu__dishes--2">  
+                        <h2 class="menu__heading reveal-text--2">plats</h2>  
+                        <div class="menu__cards">
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Coquilles Saint-Jacques</h3>
+                                    <p class="menu__card-paragraph">Accompagnées d'une purée de panais</p>
+                                </div> 
+                                <div class="menu__price reveal-text--2">40€</div> 
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>  
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Magret de canard</h3>
+                                    <p class="menu__card-paragraph">Et parmentier de pommes de terre</p>
+                                </div>  
+                                <div class="menu__price reveal-text--2">35€</div>
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>   
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--2">
+                                    <h3 class="menu__card-heading">Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p class="menu__card-paragraph">Sur son lit de gnocchis aux légumes</p>
+                                </div> 
+                                <div class="menu__price reveal-text--2">44€</div>
+                                <div class="menu__slide reveal-text--2">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>    
+                            </div>
+                        </div>
+                    </section>
+                    <section class="menu__dishes menu__dishes--3">  
+                        <h2 class="menu__heading">desserts</h2>  
+                        <div class="menu__cards">
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Pétales de violettes glacés</h3>
+                                    <p class="menu__card-paragraph">Et purée de noisettes</p>
+                                </div> 
+                                <div class="menu__price reveal-text--3">18€</div> 
+                                <div class="menu__slide reveal-text--3">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>  
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Fondant au chocolat</h3>
+                                    <p class="menu__card-paragraph">Revisité</p>
+                                </div>  
+                                <div class="menu__price reveal-text--3">22€</div>
+                                <div class="menu__slide reveal-text--3">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>   
+                            </div>
+                            <div class="menu__card">
+                                <div class="menu__card-text reveal-text--3">
+                                    <h3 class="menu__card-heading">Millefeuille croustillant</h3>
+                                    <p class="menu__card-paragraph">Myrtilles et pâte d’amande</p>
+                                </div> 
+                                <div class="menu__price reveal-text--3">23€</div>
+                                <div class="menu__slide reveal-text--3">
+                                    <span class="menu__circle fa-solid fa-circle "></span>
+                                    <span class="menu__check fa-solid fa-check "></span>
+                                </div>    
+                            </div>
+                        </div>
+                    </section>
+                </div>                                        
+                                            <!-- dishes -->                       
+                                            <!-- reservation -->                       
+                        <div class="menu__cta-button">
+                            <a href="#">Commander</a>
+                        </div>                      
+            </article>
 
+                                            <!-- FOOTER -->
+            <footer class="footer">
+                <h2 class="footer__heading" >ohmyfood</h2>
+                <nav class="footer__links-container">
+                    <div class="footer__links-icon">
+                        <a class="footer__links" href="#">
+                            <span class="footer__icons fa-solid fa-utensils"></span>
+                            <p>Proposer un restaurant</p>
+                        </a>
+                        <a class="footer__links" href="#">
+                            <span class="footer__icons fa-solid fa-handshake-angle"></span>
+                            <p>Devenir partenaire</p>
+                        </a>
+                    </div>
+                    <div class="footer__links-iconless">
+                        <a class="footer__links" href="#">Mentions légales</a>
+                        <a class="footer__links" href="mailto:#">Contact</a>
+                    </div>
+                </nav>
+            </footer>
+        </div>
     </body>
 </html>
