Modifications titres de pages restaurants et images, modification du loader

--- a/restaurants/page_1.html
+++ b/restaurants/page_1.html
@@ -12,6 +12,7 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/prefixed/style.css">
     <title>La Palette du goût</title>
 </head>
     <body> 
@@ -46,7 +47,7 @@
                                     <p class="menu__card-paragraph">Au piment d'Espelette</p>
                                 </div> 
                                 <div class="menu__price reveal-text--1">25€</div> 
-                                <div class="menu__slide reveal-text--1333">
+                                <div class="menu__slide reveal-text--1">
                                     <span class="menu__circle fa-solid fa-circle "></span>
                                     <span class="menu__check fa-solid fa-check "></span>
                                 </div>  
