--- a/restaurants/page_2.html
+++ b/restaurants/page_2.html
@@ -12,7 +12,8 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>La Palette du goût</title>
+    <link rel="stylesheet" href="./assets/css/prefixed/style.css">
+    <title>La Note Enchantée</title>
 </head>
     <body> 
                                             <!-- HEADER -->
@@ -25,7 +26,7 @@
                     <img class="header__logo" src= "../assets/images/logo/ohmyfood.png" alt="Logo du site." >
                 </div>
                 <div >
-                    <img class="header__image" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat gastronomique">
+                    <img class="header__image" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat gastronomique">
                 </div>
             </header>    
                                                 <!-- MENU -->
